yamlfiles/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waycool2o-be-censanext
  namespace: waycool2-o
spec:
  replicas: 1
  selector:
    matchLabels:
      app: waycool2o-be-censanext
  template:
    metadata:
      labels:
        app: waycool2o-be-censanext
    spec:
      containers:
      - name: waycool2o-be-censanext
        image: cnsccpwaycool2pocacr.azurecr.io/waycool2:v1
        ports:
        - containerPort: 3096
        livenessProbe:
          tcpSocket:
            port: 3096
        readinessProbe:
           tcpSocket:
            port: 3096
