yamlfiles/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: waycool2-o
spec:
  type: ClusterIP
  selector:
    app: waycool2o-be-censanext
  ports:
  - protocol: TCP
    port: 3096
    targetPort: 3096
